# resumes_django

./: .gitignore  pyproject.toml
core/: settings.py  urls.py
resumes/: admin.py  apps.py  models.py  urls.py  views.py
resumes/form/: __init__.py  resumes_form.py
resumes/migrations/: 0001_initial.py
resumes/templates/resumes/: edit.html  index.html  new.html  show.html
templates/layouts/: base.html
