[tool.poetry]
name = "django-crud"
version = "0.1.0"
description = ""
authors = ["erichsu <filafila0521@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
django = "^5.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
